# photonfdtd

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
benchmarks/: README.md  bench_grating_coupler.py  bench_memory.py  demo_eim_eme_adi.py  make_gifs.py
docs/: accuracy.rst  api.rst  conf.py  examples.rst  index.rst  installation.rst  material_data.md  quickstart.rst  requirements.txt
examples/: 01_1d_vacuum_pulse.py  02_2d_dipole.py  03_lnoi_mode.py  04_cherenkov.py
rust/: Cargo.toml
rust/src/: adi.rs  blocked.rs  cuda.rs  kernel.rs  lib.rs
src/photonfdtd/: __init__.py  adapters.py  adi.py  boundaries.py  constants.py  design.py  eim.py  eme.py  geometry.py  grid.py  jaxbackend.py  materials.py  memory.py  mode.py  monitors.py  outofcore.py  reversible.py  reversible_pml.py  rustbackend.py  simulation.py  smatrix.py  smoothing.py  sources.py  storage.py
tests/: test_backend_dispatch.py  test_backends.py  test_design.py  test_dispersion.py  test_eim_eme_adi.py  test_jax.py  test_jax_accuracy.py  test_memory.py  test_memory_planner.py  test_mode_vectorial.py  test_physics.py  test_reversible.py  test_rust.py  test_smatrix.py  test_smoke.py  test_smoothing.py  test_version.py
