[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "photonfdtd"
version = "0.1.0"
description = "Local-only FDTD + waveguide mode solver for integrated photonics, in pure Python/NumPy."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "ngpaladi" }]
keywords = ["fdtd", "photonics", "electromagnetics", "mode-solver", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]
docs = ["sphinx>=7", "furo"]

[project.urls]
Homepage = "https://github.com/ngpaladi/photonfdtd"
Issues = "https://github.com/ngpaladi/photonfdtd/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/photonfdtd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
